--- a/index.html
+++ b/index.html
@@ -3,9 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment 5</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <div class="first-nav">
+                <img class="first-nav-pic" src="assets/logo.png">
+                <h2 class="first-nav-text">Emergency <br>Service</h2>
+            </div>
+            <div class="second-nav">
+                <div class="sub-nav">
+                    <h2 class="number">0</h2>
+                    <img class="nav-pic" src="assets/heart.png" alt="">
+                </div>
+                <div class="sub-nav">
+                    <h2 class="number">100</h2>
+                    <img class="nav-pic" src="assets/coin.png" alt="">
+                </div>
+                <div class="sub-nav sub-nav2">
+                    <h2 class="number2">0</h2>
+                    <h2 class="number2">Copy</h2>
+                </div>
+            </div>
+        </nav>
+        <section class="banner">
+            <img class="banner-pic" src="assets/logo.png">
+            <h1 class="banner-title">Emergency Service Directory</h1>
+            <h1 class="banner-text">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</h1>
+        </section>
+    </header>
+    <main class="main-class">
+        <!-- <div class="main-div"> -->
+            <div class="card">
+                <img class="card-pic" src="assets/emergency.png">
+                <h2 class="card-title">National Emergency Number</h2>
+                <p class="card-text">National Emergency</p>
+                <h2 class="numbers">999</h2>
+                <p class="text">All</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic2" src="assets/police.png">
+                <h2 class="card-title">Police Helpline Number</h2>
+                <p class="card-text">Police</p>
+                <h2 class="numbers">999</h2>
+                <p class="text text2">Police</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/fire-service.png">
+                <h2 class="card-title">Fire Service Number</h2>
+                <p class="card-text">Fire Service</p>
+                <h2 class="numbers">999</h2>
+                <p class="text text3">Fire</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            
+
+            <div class="comment-nav">
+                 <p class="comment-nav-title"><img class="call-icon" src="service-center_12384282.png">Call History</p>
+                <button class="clear-comment">Clear</button>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/ambulance.png">
+                <h2 class="card-title">Ambulance Service</h2>
+                <p class="card-text">Ambulance</p>
+                <h2 class="numbers">1994-999999</h2>
+                <p class="text text4">Health</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/emergency.png">
+                <h2 class="card-title">Women & Child Helpline</h2>
+                <p class="card-text">Women & Child Helpline</p>
+                <h2 class="numbers">109</h2>
+                <p class="text text5">Help</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/emergency.png">
+                <h2 class="card-title">Anti-Corruption Helpline</h2>
+                <p class="card-text">Anti-Corruption</p>
+                <h2 class="numbers">106</h2>
+                <p class="text text6">Govt.</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/emergency.png">
+                <h2 class="card-title">Electricity Helpline</h2>
+                <p class="card-text">Electricity Outage</p>
+                <h2 class="numbers">16216</h2>
+                <p class="text text7">Electricity</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/emergency.png">
+                <h2 class="card-title">Brac Helpline</h2>
+                <p class="card-text">Brac</p>
+                <h2 class="numbers">16445</h2>
+                <p class="text text8">NGO</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-pic" src="assets/emergency.png">
+                <h2 class="card-title">Bangladesh Railway Helpline </h2>
+                <p class="card-text">Bangladesh Railway</p>
+                <h2 class="numbers">163</h2>
+                <p class="text text9">Travel</p>
+                <div class="btn">
+                    <button class="white"><img class="icon" src="Icons8.zip">Copy</button>
+                    <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
+                </div>
+            </div>
+        <!-- </div> -->
+        <!-- <div class="comment-nav">
+            <p class="comment-nav-title"><img class="call-icon" src="service-center_12384282.png">Call History</p>
+            <button class="clear-comment">Clear</button>
+        </div> -->
+    </main>
 </body>
 </html>
