--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     <main class="main-class">
         <!-- <div class="main-div"> -->
             <div class="card">
-                <img class="card-pic" src="assets/emergency.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/emergency.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">National Emergency Number</h2>
                 <p class="card-text">National Emergency</p>
                 <h2 class="numbers">999</h2>
@@ -57,7 +60,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic2" src="assets/police.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/police.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Police Helpline Number</h2>
                 <p class="card-text">Police</p>
                 <h2 class="numbers">999</h2>
@@ -68,7 +74,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/fire-service.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/fire-service.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Fire Service Number</h2>
                 <p class="card-text">Fire Service</p>
                 <h2 class="numbers">999</h2>
@@ -85,7 +94,10 @@
                 <button class="clear-comment">Clear</button>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/ambulance.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/ambulance.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Ambulance Service</h2>
                 <p class="card-text">Ambulance</p>
                 <h2 class="numbers">1994-999999</h2>
@@ -96,7 +108,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/emergency.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/emergency.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Women & Child Helpline</h2>
                 <p class="card-text">Women & Child Helpline</p>
                 <h2 class="numbers">109</h2>
@@ -107,7 +122,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/emergency.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/emergency.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Anti-Corruption Helpline</h2>
                 <p class="card-text">Anti-Corruption</p>
                 <h2 class="numbers">106</h2>
@@ -118,7 +136,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/emergency.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/emergency.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Electricity Helpline</h2>
                 <p class="card-text">Electricity Outage</p>
                 <h2 class="numbers">16216</h2>
@@ -129,7 +150,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/emergency.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/emergency.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Brac Helpline</h2>
                 <p class="card-text">Brac</p>
                 <h2 class="numbers">16445</h2>
@@ -140,7 +164,10 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-pic" src="assets/emergency.png">
+                <div class="last-pic">
+                    <img class="card-pic" src="assets/emergency.png">
+                    <img class="heart-pic" src="heart.png">
+                </div>
                 <h2 class="card-title">Bangladesh Railway Helpline </h2>
                 <p class="card-text">Bangladesh Railway</p>
                 <h2 class="numbers">163</h2>
@@ -150,11 +177,8 @@
                     <button class="green"><img class="icon" src="icons8-outgoing-call-24.png">Call</button>
                 </div>
             </div>
-        <!-- </div> -->
-        <!-- <div class="comment-nav">
-            <p class="comment-nav-title"><img class="call-icon" src="service-center_12384282.png">Call History</p>
-            <button class="clear-comment">Clear</button>
-        </div> -->
+       
     </main>
+    <script src="dynamic.js"></script>
 </body>
 </html>
