--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
             </div>
             <div class="second-nav">
                 <div class="sub-nav">
-                    <h2 class="number">0</h2>
+                    <h2 class="number" id="love">0</h2>
                     <img class="nav-pic" src="assets/heart.png" alt="">
                 </div>
                 <div class="sub-nav">
-                    <h2 class="number">100</h2>
+                    <h2 class="number" id="coin">100</h2>
                     <img class="nav-pic" src="assets/coin.png" alt="">
                 </div>
                 <div class="sub-nav sub-nav2">
-                    <h2 class="number2">0</h2>
+                    <h2 class="number2" id="count-copy">0</h2>
                     <h2 class="number2">Copy</h2>
                 </div>
             </div>
@@ -88,10 +88,13 @@
                 </div>
             </div>
             
-
+            <div class="comment-nav-main">
             <div class="comment-nav">
-                 <p class="comment-nav-title"><img class="call-icon" src="service-center_12384282.png">Call History</p>
-                <button class="clear-comment">Clear</button>
+                <p class="comment-nav-title"><img class="call-icon" src="service-center_12384282.png">Call History</p>
+                <button class="clear-comment" id="clearAll">Clear</button>
+                
+            </div>
+            <aside id="history" class="call-history"></aside>
             </div>
             <div class="card">
                 <div class="last-pic">
